fix the another problem with horizontal scroll...

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -36,7 +36,7 @@ $headerPaddTop: 25px;
     top: 60vh;
     margin: 0 auto;
     padding-left: 20px;
-    width: $contentWidth;
+    max-width: $contentWidth;
     z-index: 0;
     font-style: normal;
     font-weight: 00;
